--- a/temp-converter.html
+++ b/temp-converter.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./stylesheet.css"/>
     <script src="./javascript.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Temperature Converter</h1>
+    <div class="toFahr">
+        <h3>Convert to Fahrenheit</h3>
+    </div>
 </body>
 </html>
