--- a/temp-converter.html
+++ b/temp-converter.html
@@ -12,6 +12,18 @@
     <h1>Temperature Converter</h1>
     <div class="toFahr">
         <h3>Convert to Fahrenheit</h3>
+        <label>Enter Temp in Celsius</label>
+            <input id="degC" placeholder="0">
+        <button type="button" onclick="convertToFahrenheit()">Convert to Fahrenheit</button>
+            <p id="toF"></p>
+    </div>
+
+    <div class="toCels">
+        <h3>Convert to Celsius</h3>
+        <label>Enter Temp in Fahrenheit</label>
+            <input id="degF" placeholder="0">
+        <button type="button" onclick="convertToCelsius()">Convert to Celsius</button>
+        <p id="toC"></p>
     </div>
 </body>
 </html>
